--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ input{
 
 header{
     display: grid;
-    grid-template-columns: repeat(50, 1fr);
+    grid-template-columns: repeat(12, 1fr);
     height: 50px;
     background-color: #fff;
     position:fixed;
@@ -32,14 +32,14 @@ header{
 }
 
 .title_img {
-    grid-column: 1/14;
+    grid-column: 1/4;
     grid-row: 1/2;
     max-width: 100%;
     max-height: 100%;
 }
 
 .story_img {
-    grid-column: 36/40;
+    grid-column: 10/11;
     grid-row: 1/2;
     max-width: 70%;
     max-height: 70%;
@@ -47,7 +47,7 @@ header{
 }
 
 .wear_img {
-    grid-column: 41/45;
+    grid-column: 11/12;
     grid-row: 1/2;
     max-width: 70%;
     max-height: 70%;
@@ -55,7 +55,7 @@ header{
 }
 
 .login_img {
-    grid-column: 46/50;
+    grid-column: 12/13;
     grid-row: 1/2;
     max-width: 70%;
     max-height: 70%;
@@ -64,7 +64,7 @@ header{
 
 .seach {
     margin: 0 auto;
-    grid-column: 14/31;
+    grid-column: 4/9;
     grid-row: 1/2;
 }
 
@@ -162,3 +162,20 @@ footer {
     background-color: #fff;
     border-top: solid 1px #efefef;
 }
+
+.p-modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow-y: auto;
+    visibility: hidden;
+    opacity: 0;
+    z-index: -1;
+    &.is-open {
+      visibility: visible;
+      opacity: 1;
+      z-index: 100;
+    }
+  }
