--- a/main.css
+++ b/main.css
@@ -71,15 +71,15 @@ header{
 
 /*フォーム全体*/
 #form1{
-    position:relative;/*フォームの相対位置*/	
+    position:relative;/*フォームの相対位置*/
     max-width:100%;/*フォームのサイズ*/
     }
     /*検索ボックス*/
     #sbox{
     width: 100%;
-    height:100%;/*検索ボックスの高さ*/	
-    padding:0 10px;/*テキスト位置調整*/	 
-    border-radius: 0;/*検索ボックスの角を丸める*/		
+    height:100%;/*検索ボックスの高さ*/
+    padding:0 10px;/*テキスト位置調整*/
+    border-radius: 0;/*検索ボックスの角を丸める*/
     background: #efefef;/*検索ボックスの背景カラー*/
     border-radius: 6px;
     outline:0;/*クリック時の青い枠線消す*/
@@ -98,7 +98,7 @@ header{
     row-gap: 5px;
     margin: 5px;
   }
-   
+
   .grid {
     /* box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4); */
     /* float: left; */
@@ -140,7 +140,7 @@ header{
     display: block;
     /* margin: 10px 0; */
     padding: 5px;
-  } 
+  }
 
   .grid .brand_name {
     color: #777;
@@ -157,7 +157,7 @@ header{
 
 
 footer {
-    margin-top:20px; 
+    margin-top:20px;
     height: 50px;
     background-color: #fff;
     border-top: solid 1px #efefef;
@@ -173,9 +173,10 @@ footer {
     visibility: hidden;
     opacity: 0;
     z-index: -1;
-    &.is-open {
-      visibility: visible;
-      opacity: 1;
-      z-index: 100;
-    }
   }
+
+.p-modal.is-open {
+  visibility: visible;
+  opacity: 1;
+  z-index: 100;
+}
