--- a/main.css
+++ b/main.css
@@ -11,6 +11,15 @@
 		sans-serif;
 }
 
+button{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+    appearance: none;
+}
+
 input{
     border:solid 1px #e7e7e7;
     background:none;
@@ -173,9 +182,11 @@ footer {
     visibility: hidden;
     opacity: 0;
     z-index: -1;
-    &.is-open {
-      visibility: visible;
-      opacity: 1;
-      z-index: 100;
-    }
+  }
+
+  .is-open {
+    visibility: visible;
+    opacity: 1;
+    z-index: 100;
+    max-width: 100%;
   }
