--- a/main.css
+++ b/main.css
@@ -99,7 +99,7 @@ header{
 
 
 
-.container {
+.grid {
     padding-top: 50px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -108,15 +108,12 @@ header{
     margin: 5px;
   }
    
-  .grid {
-    /* box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4); */
-    /* float: left; */
+  .grid_item {
     font-size: 12px;
     margin: 0 auto;
     height: 100%;
     width: 100%;
     border: solid 1px #efefef;
-    /* transition: top 1s ease, left 1s ease; */
   }
 
   .image_area {
@@ -128,11 +125,10 @@ header{
 
   .grid_image {
     display: block;
-    /* max-height: 200px;
     max-width: 100%;
-    margin: 0 auto; */
+    margin: 0 auto;
     width :100%;
-	height: 100%;
+	height: 200px;
 	object-fit: cover;
   }
 
@@ -140,8 +136,6 @@ header{
     text-align:center;
     font-size: 14px;
     display: block;
-    /* margin: 10px 0;
-    padding: 0 0 5px; */
   }
 
   .detail {
@@ -158,8 +152,25 @@ header{
   }
 
 
+.modal {
+    width: 100%;
+    height: 100%;    
+    position: absolute;
+    z-index: 100;    
+    background: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.modal img {
+    width: 90%;
+    margin: auto;
+}
 
+.modal.hide {
+    display: none;
+}
 
 
 
@@ -171,22 +182,3 @@ footer {
     background-color: #fff;
     border-top: solid 1px #efefef;
 }
-
-.p-modal {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    overflow-y: auto;
-    visibility: hidden;
-    opacity: 0;
-    z-index: -1;
-  }
-
-  .is-open {
-    visibility: visible;
-    opacity: 1;
-    z-index: 100;
-    max-width: 100%;
-  }
